std-toolkit/eschema/src/cli/__tests__/fixtures/schema-snapshots/invalid-structure/domain/billing/invoice/versions/v3.ts
export const wrong = v1.evolve("v3", {}, (value) => value);
